Apply suggestions from @solth
Co-authored-by: Arved Solth <solth@effective-webwork.de>